--- a/python-db/requirements.txt
+++ b/python-db/requirements.txt
@@ -11,3 +11,12 @@ SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 tzdata==2025.1
 pandas==2.2.3
+Sphinx==8.2.3
+sphinx-rtd-theme==3.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
+sphinxcontrib-jquery==4.1
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
