--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 tzdata==2025.1
 pandas==2.2.3
-Sphinx==8.2.3
+Sphinx>=8.0,<9
 sphinx-rtd-theme==3.0.2
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
