--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,8 @@ SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 tzdata==2025.1
 pandas==2.2.3
-Sphinx>=8.0,<9
-sphinx-rtd-theme==3.0.2
+Sphinx
+sphinx-rtd-theme
 sphinxcontrib-applehelp==2.0.0
 sphinxcontrib-devhelp==2.0.0
 sphinxcontrib-htmlhelp==2.1.0
