--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,5 @@ sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
+ghp-import
+pytest
