--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -1,46 +1,50 @@
-# This is a basic workflow to help you get started with Actions
+name: Build-Docs
 
-name: Build-sphinx-docs
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs: 
-  # This workflow contains a single job called "build"
-  build: 
-    # The type of runner that the job will run on
+jobs:
+  build:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Checkout the repository.
       - uses: actions/checkout@v2
 
+      # Set up Python.
       - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
-           python-version: "3.10"
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-        
-      - name: Install dependencies
-        run: | 
+          python-version: "3.10"
+
+      # Set up Node.
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+
+      # Install Python dependencies and build Sphinx docs.
+      - name: Build Sphinx Documentation
+        run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Build HTML
-        run: | 
-          cd docs/
+          cd docs
           make html
-      - name: Run ghp-import
-        run: | 
-          ghp-import -n -p -f docs/_build/html
+          cd ..
+
+      # Install JS dependencies and build JSDoc docs.
+      - name: Build JSDoc Documentation
+        run: |
+          npm install
+          npx jsdoc -c jsdoc.conf.json
+
+      # Deploy both docs (_build/html and jsdoc) to GitHub Pages.
+      - name: Deploy Documentation to GitHub Pages
+        run: |
+          # Ensure that both Sphinx and JSDoc docs are inside the "docs" folder.
+          # This command pushes everything inside "docs/" to the gh-pages branch.
+          ghp-import -n -p -f docs
