--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -12,22 +12,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the repository.
       - uses: actions/checkout@v2
 
-      # Set up Python.
       - name: Set up Python 3.10
         uses: actions/setup-python@v2
         with:
           python-version: "3.10"
 
-      # Set up Node.
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
           node-version: "16"
 
-      # Install Python dependencies and build Sphinx docs.
       - name: Build Sphinx Documentation
         run: |
           python -m pip install --upgrade pip
@@ -36,15 +32,19 @@ jobs:
           make html
           cd ..
 
-      # Install JS dependencies and build JSDoc docs.
       - name: Build JSDoc Documentation
         run: |
           npm install
           npx jsdoc -c jsdoc.conf.json
 
-      # Deploy both docs (_build/html and jsdoc) to GitHub Pages.
+      # New step: Combine Sphinx and JSDoc outputs
+      - name: Merge Documentation Outputs
+        run: |
+          # Ensure the target directory exists in the Sphinx build output
+          mkdir -p docs/_build/html/jsdoc
+          # Copy all files from the JSDoc output folder into the Sphinx build folder
+          cp -R docs/jsdoc/* docs/_build/html/jsdoc/
+
       - name: Deploy Documentation to GitHub Pages
         run: |
-          # Ensure that both Sphinx and JSDoc docs are inside the "docs" folder.
-          # This command pushes everything inside "docs/" to the gh-pages branch.
-          ghp-import -n -p -f docs
+          ghp-import -n -p -f docs/_build/html
