--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
     "@vue/compiler-sfc": "^3.5.13",
+    "@vue/test-utils": "^2.4.6",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "jsdoc": "^4.0.4",
-    "jsdoc-vuejs": "^4.0.0"
+    "jsdoc-vuejs": "^4.0.0",
+    "vue-jest": "^5.0.0-alpha.10"
   }
 }
